<resources>
    <string name="app_name">RoTravel</string>
    <string name="register_text">New to RoTravel? Click Register</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Enter Password</string>
    <string name="register_button">Register</string>
    <string name="username_hint">Enter Username</string>
    <string name="title_activity_map">Map</string>
    <string name="uplod_photo_string">Uplod Photo</string>
    <string name="title_activity_upload_photo">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="uploaded_photo">uploaded photo</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="see_photos">See Photos</string>
    <string name="see_videos">See Videos</string>
    <string name="add_to_travel_list">Add to travel list</string>
    <string name="share_only_with_friends">Share only with friends</string>
    <string name="upload">Upload</string>
    <string name="title_activity_destination_list">Map</string>
</resources>