<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

<!--    <Button-->
<!--        android:id="@+id/btUpload"-->
<!--        android:layout_width="203dp"-->
<!--        android:layout_height="67dp"-->
<!--        android:fontFamily="@font/bubbler_one"-->
<!--        android:text="@string/select_from_gallery"-->
<!--        android:textColor="#526838"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:backgroundTint="#E3F1E4"-->
<!--        app:icon="@android:drawable/ic_menu_gallery"-->
<!--        app:iconPadding="10dp"-->
<!--        app:iconTint="#82A35B"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.621" />-->

    <!--    <Button-->
<!--        android:id="@+id/btFireUpload"-->
<!--        android:layout_width="203dp"-->
<!--        android:layout_height="67dp"-->
<!--        android:fontFamily="@font/bubbler_one"-->
<!--        android:text="@string/upload"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:icon="@android:drawable/ic_menu_upload"-->
<!--        app:iconPadding="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btUpload"-->
<!--        app:layout_constraintVertical_bias="0.57" />-->

    <ImageView
        android:id="@+id/ivUploadedImg"
        android:layout_width="309dp"
        android:layout_height="311dp"
        android:contentDescription="@string/uploaded_photo"
        app:layout_constraintBottom_toTopOf="@+id/btUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        tools:src="@tools:sample/backgrounds/scenic" />

    <VideoView
        android:id="@+id/video"
        android:layout_width="314dp"
        android:layout_height="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swPrivacy"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/bubbler_one"
        android:text="@string/share_only_with_friends"
        android:textColor="#265328"
        android:textColorLink="#4FDC55"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btUpload"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btFireUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#689337"
        android:clickable="true"
        android:contentDescription="@string/uplod_photo_string"
        android:focusable="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toEndOf="@+id/swPrivacy"
        app:layout_constraintTop_toBottomOf="@+id/btUpload"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@android:drawable/ic_menu_upload"
        app:useCompatPadding="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="Select from gallery"
        app:backgroundTint="#E3F1E4"
        app:iconTint="#7F9F5A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintVertical_bias="0.586"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        app:useCompatPadding="true" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="244dp"
        android:layout_height="49dp"
        android:ems="10"
        android:fontFamily="@font/bubbler_one"
        android:gravity="start|top"
        android:hint="Photo Description"
        android:inputType="textMultiLine"
        android:textColor="#608534"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintVertical_bias="0.241" />

    <ImageView
        android:id="@+id/ivupperCorner"
        android:layout_width="106dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/leaves" />

    <ImageView
        android:id="@+id/ivDownCorner"
        android:layout_width="99dp"
        android:layout_height="96dp"
        android:rotation="184"
        android:rotationX="-8"
        android:rotationY="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/leaves" />


</androidx.constraintlayout.widget.ConstraintLayout>